Eliminate an alignment issue found by clang.

Clang helpfully noticed that libcap allocated things should be 64-bit
aligned on 64-bit platforms. Restructure the memory allocation to ensure
this.

Fixes:

   https://bugzilla.kernel.org/show_bug.cgi?id=214183

Signed-off-by: Andrew G. Morgan <morgan@kernel.org>